--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+        <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" /> -->
         <meta name="theme-color" content="#000000" />
         <link rel="apple-touch-icon" href="logo192.png" />
+        <!-- <link rel="stylesheet" href="../assets/fonts/stylesheet.css" /> -->
         <title>Mindy Tasks</title>
 
         <script>
